[package]
name = "toy-payments-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
csv = "1.3.1"
rust_decimal = { version = "1.37.1", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
